# aiops-engine-for-skywalking

./: .gitignore  .licenserc.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.py  pyproject.toml  settings.toml  setup.cfg
.github/workflows/: CI.yaml  dead-link-checker.yaml
assets/: README.md
docs/: menu.yml
docs/en/contribute/: CodingStyle.md  Datasets.md  DevEnv.md
engine/models/: __init__.py
engine/models/metric/: __init__.py  utils.py
engine/models/metric/base/: __init__.py  detector.py
engine/models/metric/detector/: __init__.py  spot_detector.py
engine/models/metric/detectors/: KDE_detector.py  __init__.py  beta_detector.py  binomial_detector.py  ksigma_detector.py  poisson_detector.py  prophet_detector.py  spot_detector.py
engine/models/metric/serve/: deployment.py
engine/models/test/: test_alert_manager.py  test_detector.py
engine/models/tests/: test_KDE.py  test_alert_manager.py  test_beta.py  test_detector.py  test_ksigma.py  test_prophet.py
engine/models/tests/evaluate/: __init__.py  metrics.py  numenta_aware_metrics.py  point_aware_metrics.py  series_aware_metrics.py  ts_metrics.py
engine/providers/skywalking/log/grpc/: multiprocessing_server.py  server.py  servicer.py
engine/providers/skywalking/log/grpc/proto/: log-exporter.proto
engine/providers/skywalking/log/grpc/servers/: multiprocessing_server.py  ray_server.py  server.py
engine/providers/skywalking/log/grpc/servicers/: aio_servicer.py  plain_servicer.py
engine/providers/skywalking/log/tests/: test_mock_client.py
engine/utils/: logging_mixin.py  timer.py
example/metric/: metric_anomaly_detection.ipynb
experiments/: compose.yaml  drain3.ini  raytest.py  withoutraytest.py  withoutredis.py
experiments/log/clustering/: drain3.ini  ray_log_process.py  transformer.py
experiments/log/clustering/drain3/: drain.py  memory_buffer_persistence.py  template_miner.py  template_miner_config.py
experiments/log/clustering/drain_parser/: drain.py  file_persistence.py  memory_buffer_persistence.py  redis_persistence.py  simple_profiler.py  template_miner.py  template_miner_config.py
experiments/log/compressor/: compare.py  redis_gen.py  sh.py  training_dict_samples.txt
experiments/metric/: metric_anomaly_detection.ipynb
sample_data_gaia/: README.md
tools/: README.md  cleaner.py  get_data.py  grpc_gen.py
tools/tests/: test_cleaner.py
