#  Copyright 2022 SkyAPM org
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[tool.poetry]
name = "aiops-engine-for-skywalking"
version = "0.1.0"
description = "An experimental alert engine for the SkyWalking observability data"
license = "Apache-2.0"
authors = ["Superskyyy <yihaochen@apache.org>"]
readme = "README.md"
homepage = "https://skywalking.apache.org/"
repository = "https://github.com/superskyyy/aiops-engine-for-skywalking"
keywords = ["skywalking", "alert", "observability", "aiops", "machine-learning"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10" # we don't do <3.8 due to scipy， we don't do 3.10 due to ray
gql = {extras = ["all"], version = "^3.2.0"} # graphql client
PyYAML = "^6.0"  # configuration parser
# below two dependencies are for distributed data processing
#modin = {extras = ["ray"], version = "^0.14.0"} # we don't need this for now.
#ray = "^1.12.1" # same as above
# data transformation
vaex = "^4.9.1"
scikit-learn = "^1.0.2"
scipy = "^1.9.0"
numpy = "^1.23.1"


[tool.poetry.dev-dependencies]
PySnooper = "^1.1.1"
# LINTERS
flake8 = "^4.0.1"
unify = "^0.5"
flynt = "^0.76"
flake8-quotes = "^3.3.1"
flake8-use-fstring = "^1.3"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
flake8-eradicate = "^1.2.1"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^22.4.25"
flake8-comprehensions = "^3.8.0"
flake8-2020 = "^1.6.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
