#  Copyright 2022 SkyAPM org
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#  http://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[tool.poetry]
name = "aiops-engine-for-skywalking"
version = "0.1.0"
description = "An AIOps engine for the SkyWalking observability data"
license = "Apache-2.0"
authors = ["Superskyyy <yihaochen@apache.org>"]
readme = "README.md"
homepage = "https://skywalking.apache.org/"
repository = "https://github.com/SkyAPM/aiops-engine-for-skywalking"
packages = [{include = "engine"}]
keywords = ["skywalking", "alert", "observability", "aiops", "machine-learning"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
]

[tool.poetry.urls]
"Issues Tracker" = "https://github.com/SkyAPM/aiops-engine-for-skywalking/issues"
"Documentation" = "TBD"

[tool.poetry.scripts]
# entry point for the CLI

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
gql = { extras = ["all"], version = "^3.2.0" } # graphql client
scikit-learn = "^1.0.2"
scipy = "^1.9.0"
numpy = "^1.23.1"
pandas = "^1.4.4"
jupyter = "^1.0.0"
ray = "^2.0.0"
redis = { extras = ["hiredis"], version = "^4.3.4" }
pyzstd = "^0.15.3"
dynaconf = "^3.1.9"
cachetools = "^5.2.0"
grpcio-tools = ">=1.42.0"
prophet = "^1.1.4"

[tool.poetry.dev-dependencies]
PySnooper = "^1.1.1"
# TESTING
tox = "^3.25.1"
tqdm = "^4.64.0"
yappi = "^1.3.5"

[tool.poetry.group.linters]
[tool.poetry.group.linters.dependencies]
# used by CI and dev check
# poetry install --only linters
flake8 = "^4.0.1"
unify = "^0.5"
flynt = "^0.76"
flake8-quotes = "^3.3.1"
flake8-use-fstring = "^1.3"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
flake8-eradicate = "^1.2.1"
flake8-docstrings = "^1.6.0"
flake8-bugbear = "^22.4.25"
flake8-comprehensions = "^3.8.0"
flake8-2020 = "^1.6.1"
isort = "^5.10.1"
# flake8-annotations = "^2.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
